.kubernetes/db.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db
  namespace: forecast
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forecast
      tier: db
  template:
    metadata:
      labels:
        app: forecast
        tier: db
    spec:
      containers:
        - name: db
          image: postgres:16.2
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: db-data
      volumes:
        - name: db-data
          persistentVolumeClaim:
            claimName: db-pvc
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: role
                    operator: In
                    values:
                      - db
---
apiVersion: v1
kind: Service
metadata:
  name: db
  namespace: forecast
  labels:
    app: forecast
    tier: db
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: forecast
    tier: db
