.kubernetes/api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api

spec:
  replicas: 2
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: birzgalisn/forecast-api:main
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - name: app
              containerPort: 4000
          livenessProbe:
            failureThreshold: 3
            httpGet:
              scheme: HTTP
              path: /ping
              port: app
            initialDelaySeconds: 10
            periodSeconds: 10
            timeoutSeconds: 3

---
apiVersion: v1
kind: Service
metadata:
  name: api

spec:
  type: NodePort
  ports:
    - port: 4000
  selector:
    app: api

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: api-ingress-route

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`api.forecast.niksbirzgalis.com`)
      kind: Rule
      services:
        - name: api
          port: 4000
          sticky:
            cookie:
              httpOnly: true
              name: api
              secure: true
  tls:
    certResolver: letsencrypt
