.kubernetes/client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client

spec:
  replicas: 2
  selector:
    matchLabels:
      app: client
  template:
    metadata:
      labels:
        app: client
    spec:
      containers:
        - name: client
          image: birzgalisn/forecast-client:main
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
          ports:
            - containerPort: 3000

---
apiVersion: v1
kind: Service
metadata:
  name: client

spec:
  type: NodePort
  ports:
    - port: 3000
  selector:
    app: client

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: client-ingress-route

spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.forecast.niksbirzgalis.com`)
      kind: Rule
      services:
        - name: client
          port: 3000
  tls:
    certResolver: letsencrypt
